--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -379,6 +379,7 @@ button:hover {
   background: var(--dark);
   position: relative;
   z-index: 0;
+  overflow: hidden;
 }
 
 .header .bg-gradient:after {
@@ -461,6 +462,10 @@ button:hover {
 .header .nav-item-email:hover .nav-item-phone__text, .header .nav-item-phone:hover .nav-item-email__text,
 .header .nav-item-phone:hover .nav-item-phone__text {
   color: var(--red);
+}
+
+.header .nav-item-email__text {
+  letter-spacing: 1px;
 }
 
 .header .nav-item__button {
@@ -834,11 +839,17 @@ button:hover {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-top: 80px;
+  text-align: center;
 }
 
 .become-member-item-circle {
@@ -865,16 +876,36 @@ button:hover {
   font-display: swap;
   font-size: 36px;
   color: var(--white);
+  margin-bottom: 20px;
 }
 
 .become-member-item__text {
-  font-size: 20px;
+  font-size: 24px;
   font-family: 'openSans';
   font-weight: 400;
   line-height: 24px;
   color: var(--gray);
   word-wrap: break-word;
   width: 80%;
+}
+
+.become-member .line_red {
+  width: 390px;
+  height: 4px;
+  background-color: var(--red);
+  position: absolute;
+  top: 110px;
+  left: 240px;
+}
+
+.become-member .line_red::before {
+  content: '';
+  width: 390px;
+  height: 4px;
+  background-color: var(--red);
+  position: absolute;
+  top: 0px;
+  left: 430px;
 }
 
 .faq {
@@ -911,15 +942,29 @@ button:hover {
   z-index: 1;
 }
 
+.faq-macbook .mackBook-front {
+  width: 360px;
+  height: 225px;
+  position: absolute;
+  z-index: 5;
+  left: 140px;
+  top: 23px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .faq-item {
   width: 100%;
-  height: 60px;
+  max-height: 60px;
   overflow: hidden;
   margin-top: 40px;
   -webkit-transition: .3s;
   -o-transition: .3s;
   transition: .3s;
   background-color: var(--gray-light);
+  -webkit-transition: max-height .5s;
+  -o-transition: max-height .5s;
+  transition: max-height .5s;
 }
 
 .faq-item-title {
@@ -977,7 +1022,7 @@ button:hover {
 }
 
 .faq .showFaqInfo {
-  height: auto;
+  max-height: 200px;
 }
 
 .bidding-enhanced {
@@ -1041,6 +1086,12 @@ button:hover {
   color: var(--plyr-range-fill-background, var(--plyr-color-main, var(--plyr-color-main, #FF2B2A)));
 }
 
+.bidding-enhanced-video .plyr__controls__item:hover,
+.bidding-enhanced-video .plyr__controls__item:hover,
+.bidding-enhanced-video .plyr__control:hover {
+  background-color: transparent !important;
+}
+
 .bidding-enhanced__title {
   text-transform: uppercase;
   font-family: 'Oswald';
@@ -1059,14 +1110,18 @@ button:hover {
   margin-top: 24px;
 }
 
-.bidding-enhanced__button {
+.bidding-enhanced-buttons button {
   width: 180px;
   height: 56px;
   margin-top: 40px;
 }
 
-.bidding-enhanced__button:hover {
+.bidding-enhanced-buttons button:hover {
   border: 3px solid var(--red);
+}
+
+.bidding-enhanced .btn_submit {
+  margin-left: 25px;
 }
 
 .footer {
@@ -1083,4 +1138,219 @@ button:hover {
   font-display: swap;
   color: var(--white);
   margin-top: 18px;
+}
+
+.modal-content {
+  -webkit-box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
+          box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
+  width: 450px;
+  height: 550px;
+}
+
+.modal-header {
+  position: relative;
+  border: none;
+}
+
+.modal-header .close-modal {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-color: var(--white);
+  color: var(--red);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 25px;
+  cursor: pointer;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+
+.modal-header .close-modal:hover {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.modal-title {
+  font-family: 'Oswald';
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  font-size: 24px;
+  line-height: 64px;
+  color: var(--dark);
+  text-transform: uppercase;
+  text-align: center;
+  width: 100%;
+}
+
+.modal .form {
+  text-align: center;
+}
+
+.modal .form-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal .form-list {
+  width: 70%;
+  height: 40px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.modal .form__input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-family: 'OpenSans';
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--dark);
+  border: none;
+  border-bottom: 2px solid var(--gray);
+}
+
+.modal .form__input:focus {
+  border-bottom: 2px solid var(--red);
+}
+
+.modal .form__label {
+  position: absolute;
+  left: 0px;
+  top: 10px;
+  font-family: 'OpenSans';
+  font-weight: 300;
+  font-size: 16px;
+  color: var(--dark);
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.modal .form .form__input:focus ~ .form__label,
+.modal .form .form__input:not(:placeholder-shown) ~ .form__label {
+  top: -8px;
+  font-size: 13px;
+  color: var(--red);
+}
+
+.modal .form .select-item {
+  max-height: 130px;
+  overflow-y: scroll;
+  position: relative;
+  background-color: var(--white);
+  z-index: 5;
+  visibility: hidden;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.modal .form .select .option {
+  height: 45px;
+  text-align: start;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  font-family: 'OpenSans';
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--dark);
+  padding-left: 10px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.modal .form .select .option:hover {
+  background-color: var(--red);
+  color: var(--white);
+}
+
+.modal .form .openOptions {
+  visibility: visible;
+}
+
+.modal .form .select-item::-webkit-scrollbar {
+  width: 5px;
+}
+
+.modal .form .select-item::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 3px var(--gray);
+          box-shadow: inset 0 0 3px var(--gray);
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+}
+
+.modal .form .select-item::-webkit-scrollbar-thumb {
+  background: var(--red);
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+}
+
+.modal .form__button {
+  width: 180px;
+  height: 50px;
+  margin-top: 40px;
+}
+
+.modal .form__button:hover {
+  border: 3px solid var(--red);
+}
+
+@-webkit-keyframes animInfo {
+  from {
+    height: 60px;
+  }
+  to {
+    height: 150px;
+  }
+}
+
+@keyframes animInfo {
+  from {
+    height: 60px;
+  }
+  to {
+    height: 150px;
+  }
 }
