--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -40,6 +40,7 @@ button {
     background: var(--dark);
     position: relative;
     z-index: 0;
+    overflow: hidden;
 
     
 .bg-gradient:after{
@@ -98,7 +99,11 @@ button {
                     color: var(--red);
                 }
             }
-
+            &-email {
+                &__text {
+                    letter-spacing: 1px;
+                }
+            }
             &__button {
                 width: 164px;
                 height: 48px;
@@ -384,8 +389,9 @@ button {
         text-transform: uppercase;
     }
     &-item {
-        @include flex-between();
+        @include flex-column(center, center);
         margin-top: 80px;
+        text-align: center;
         &-circle {
             width: 64px;
             height: 64px;
@@ -395,9 +401,10 @@ button {
             @include font(500);
             font-size: 36px;
             color: var(--white);
+            margin-bottom: 20px;
         }
         &__text {
-            font-size: 20px;
+            font-size: 24px;
             font-family: 'openSans';
             font-weight: 400;
             line-height: 24px;
@@ -405,6 +412,23 @@ button {
             word-wrap: break-word;
             width: 80%;
         }
+    }
+    .line_red {
+        width: 390px;
+        height: 4px;
+        background-color: var(--red);
+        position: absolute;
+        top: 110px;
+        left: 240px;
+    }
+    .line_red::before {
+        content: '';
+        width: 390px;
+        height: 4px;
+        background-color: var(--red);
+        position: absolute;
+        top: 0px;
+        left: 430px;
     }
 }
 
@@ -433,14 +457,24 @@ button {
             position: relative;
             z-index: 1;
         }
+        .mackBook-front {
+            width: 360px;
+            height: 225px;
+            position: absolute;
+            z-index: 5;
+            left: 140px;
+            top: 23px;
+            object-fit: cover;
+        }
     }
     &-item {
         width: 100%;
-        height: 60px;
+        max-height: 60px;
         overflow: hidden;
         margin-top: 40px;
         transition: .3s;
         background-color: var(--gray-light);
+        transition: max-height .5s;
 
         &-title {
             width: 100%;
@@ -478,7 +512,7 @@ button {
         }
     }
     .showFaqInfo {
-        height: auto;
+        max-height: 200px;
     }
 }
 
@@ -520,6 +554,11 @@ button {
             color: #FF2B2A;
             color: var(--plyr-range-fill-background,var(--plyr-color-main,var(--plyr-color-main,#FF2B2A)));
         }
+        .plyr__controls__item:hover,
+        .plyr__controls__item:hover,
+        .plyr__control:hover {
+            background-color: transparent !important;
+        }
     }
     &__title {
         text-transform: uppercase;
@@ -534,7 +573,7 @@ button {
         color: var(--gray); 
         margin-top: 24px;
     }
-    &__button {
+    &-buttons button {
         width: 180px;
         height: 56px;
         margin-top: 40px;
@@ -542,6 +581,10 @@ button {
         &:hover {
             border: 3px solid var(--red);
         }
+    }
+    
+    .btn_submit {
+        margin-left: 25px;
     }
 }
 
@@ -560,6 +603,149 @@ button {
         font-display: swap;
         color: var(--white);
         margin-top: 18px;
+    }
+}
+
+// Modal
+
+.modal {
+    &-content {
+    box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
+    width: 450px;
+    height: 550px;
+    }
+    &-header {
+        position: relative;
+        border: none;
+        .close-modal {
+            position: absolute;
+            top: -15px;
+            right: -15px;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: var(--white);
+            color: var(--red);
+            @include flex-center();
+            font-size: 25px;
+            cursor: pointer;
+            transition: .5s;
+
+            &:hover {
+                transform: rotate(180deg)
+            }
+        }
+    }
+    &-title {
+        @include font(500);
+        font-size: 24px;
+        line-height: 64px;
+        color: var(--dark);
+        text-transform: uppercase;
+        text-align: center;
+        width: 100%;
+    }
+
+    .form {
+        text-align: center;
+        &-item {
+            @include flex-column(center, center);
+        }
+        &-list {
+            width: 70%;
+            height: 40px;
+            margin-bottom: 20px;
+            position: relative;
+        }
+        &__input {
+            width: 100%;
+            height: 100%;
+            outline: none;
+            font-family: 'OpenSans';
+            font-weight: 400;
+            font-size: 16px;
+            color: var(--dark);
+            border: none;
+            border-bottom: 2px solid var(--gray);
+
+            &:focus {
+                border-bottom: 2px solid var(--red); 
+            }
+        }
+        &__label {
+            position: absolute;
+            left: 0px;
+            top: 10px;
+            font-family: 'OpenSans';
+            font-weight: 300;
+            font-size: 16px;
+            color: var(--dark);
+            transition: .3s;
+        }
+        
+        .form__input:focus ~ .form__label,
+        .form__input:not(:placeholder-shown) ~ .form__label {
+            top: -8px;
+            font-size: 13px;
+            color: var(--red);
+        }
+
+        .select {
+            &-item {
+                max-height: 130px;
+                overflow-y: scroll;
+                position: relative;
+                background-color: var(--white);
+                z-index: 5;
+                visibility: hidden;
+                transition: .3s;
+            }
+            .option {
+                height: 45px;
+                text-align: start;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                font-family: 'OpenSans';
+                font-weight: 400;
+                font-size: 16px;
+                color: var(--dark);
+                padding-left: 10px;
+                transition: .3s;
+
+                &:hover {
+                    background-color: var(--red);
+                    color: var(--white);
+                }
+            }
+        }
+
+        .openOptions {
+            visibility: visible;
+        }
+
+        
+        .select-item::-webkit-scrollbar {
+            width: 5px;
+        }
+        .select-item::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 3px var(--gray); 
+            border-radius: 2px;
+        }
+        .select-item::-webkit-scrollbar-thumb {
+            background: var(--red); 
+            border-radius: 2px;
+        }
+
+        &__button {
+            width: 180px;
+            height: 50px;
+            margin-top: 40px;
+
+            &:hover {
+                border: 3px solid var(--red);
+            }
+        }
     }
 }
    
