--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -355,7 +355,7 @@ button {
   -webkit-border-radius: 4px;
           border-radius: 4px;
   font-family: 'Oswald';
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
   font-size: 15px;
@@ -365,6 +365,7 @@ button {
   -webkit-transition: .3s;
   -o-transition: .3s;
   transition: .3s;
+  text-transform: uppercase;
 }
 
 button:hover {
@@ -373,7 +374,7 @@ button:hover {
 }
 
 .header {
-  max-width: 1920px;
+  width: 100%;
   height: 753px;
   margin: 0 auto;
   background: var(--dark);
@@ -431,7 +432,7 @@ button:hover {
       -ms-flex-pack: center;
           justify-content: center;
   color: var(--red);
-  font-size: 14px;
+  font-size: 13px;
   margin-right: 8px;
   -webkit-transition: .3s;
   -o-transition: .3s;
@@ -510,6 +511,11 @@ button:hover {
 
 .header-title-store {
   margin-top: 92px;
+}
+
+.header-title-store .appStore,
+.header-title-store .googlePlay {
+  text-decoration: none;
 }
 
 .header-title-store .appStore__img,
@@ -662,10 +668,11 @@ button:hover {
 }
 
 .our-service {
-  max-width: 1920px;
+  width: 100%;
   height: 806px;
   margin: 0 auto;
   background-image: url("../../images/png/our-service.png");
+  background-repeat: no-repeat;
   position: relative;
   padding-top: 100px;
 }
@@ -1026,7 +1033,7 @@ button:hover {
 }
 
 .bidding-enhanced {
-  max-width: 1920px;
+  width: 100%;
   margin: 0 auto;
   background-color: var(--light);
   padding: 120px 0;
@@ -1125,7 +1132,7 @@ button:hover {
 }
 
 .footer {
-  max-width: 1920px;
+  width: 100%;
   margin: 0 auto;
   padding: 70px 0;
   background-color: var(--dark);
