--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -21,11 +21,12 @@ button {
     border: none;
     outline: none;
     border-radius: 4px;
-    @include font(600);
+    @include font(500);
     font-size: 15px;
     color: var(--white);
     box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
     transition: .3s;
+    text-transform: uppercase;
 
     &:hover {
         background-color: var(--white);
@@ -34,7 +35,7 @@ button {
 }
 // header
 .header {
-    max-width: 1920px;
+    width: 100%;
     height: 753px;
     margin: 0 auto;
     background: var(--dark);
@@ -77,7 +78,7 @@ button {
                     border: 1.5px solid var(--white);
                     @include flex-center();
                     color: var(--red);
-                    font-size: 14px;
+                    font-size: 13px;
                     margin-right: 8px;
                     transition: .3s
                 }
@@ -143,6 +144,7 @@ button {
 
             .appStore,
             .googlePlay {
+                text-decoration: none;
                 &__img {
                     width: 180px;
                     height: 60px;
@@ -268,10 +270,11 @@ button {
 
 // Why choose our service
 .our-service {
-    max-width: 1920px;
+    width: 100%;
     height: 806px;
     margin: 0 auto;
     background-image: url('../../images/png/our-service.png');
+    background-repeat: no-repeat;
     position: relative; 
     padding-top: 100px;
 
@@ -518,7 +521,7 @@ button {
 
 // bidding-enhanced
 .bidding-enhanced {
-    max-width: 1920px;
+    width: 100%;
     margin: 0 auto;
     background-color: var(--light);
     padding: 120px 0;
@@ -591,7 +594,7 @@ button {
 // footer
 
 .footer {
-    max-width: 1920px;
+    width: 100%;
     margin: 0 auto;
     padding: 70px 0;
     background-color: var(--dark);
