--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -636,24 +636,23 @@ button:hover {
 .our-advantages-phone .back-phone {
   position: absolute;
   top: 65px;
-  left: 95px;
+  left: 35px;
   z-index: 1;
-  -webkit-transform: rotate();
-      -ms-transform: rotate();
-          transform: rotate();
+  width: 380px;
 }
 
 .our-advantages-phone .front-phone {
   position: absolute;
   top: 10px;
-  right: 65px;
+  right: -25px;
   z-index: 3;
+  width: 500px;
 }
 
 .our-advantages-phone .triangle {
   position: absolute;
-  top: 120px;
-  left: 210px;
+  top: 110px;
+  left: 220px;
   z-index: 2;
 }
 
@@ -1278,7 +1277,7 @@ button:hover {
   max-height: 130px;
   overflow-y: scroll;
   position: relative;
-  background-color: var(--white);
+  background-color: var(--light);
   z-index: 5;
   visibility: hidden;
   -webkit-transition: .3s;
@@ -1311,6 +1310,22 @@ button:hover {
 .modal .form .select .option:hover {
   background-color: var(--red);
   color: var(--white);
+}
+
+.modal .form .select .fa-chevron-down {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.modal .form .select .rotateChevron {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .modal .form .openOptions {
