--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -558,6 +558,7 @@ button:hover {
   padding: 120px 0;
   max-width: 1920px;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .our-advantages .row {
@@ -636,24 +637,25 @@ button:hover {
 .our-advantages-phone .back-phone {
   position: absolute;
   top: 65px;
-  left: 35px;
+  left: -130px;
   z-index: 1;
-  width: 380px;
+  width: 550px;
 }
 
 .our-advantages-phone .front-phone {
   position: absolute;
   top: 10px;
-  right: -25px;
+  right: -100px;
   z-index: 3;
-  width: 500px;
+  width: 700px;
 }
 
 .our-advantages-phone .triangle {
   position: absolute;
-  top: 110px;
-  left: 220px;
+  top: 190px;
+  left: 100px;
   z-index: 2;
+  width: 220px;
 }
 
 .our-advantages__button {
@@ -946,6 +948,7 @@ button:hover {
 .faq-macbook__macbook-img {
   position: relative;
   z-index: 1;
+  width: 480px;
 }
 
 .faq-macbook .mackBook-front {
