--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
 @font-face{
     font-family: 'Oswald';
     src: url(../../fonts/Oswald-ExtraLight.ttf);
