--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -2029,20 +2029,6 @@ button:hover {
     margin-top: 16px;
     font-size: 15px;
   }
-  .modal {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
   .modal-dialog {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2065,10 +2051,14 @@ button:hover {
 
 @media screen and (max-width: 420px) {
   .header .nav-item__button {
-    margin-top: 0px;
+    margin-top: 20px;
+  }
+  .header .nav-email__text {
+    letter-spacing: 0px;
   }
   .header-title__sup-text {
     font-size: 15px;
+    margin-bottom: 0;
   }
   .header-title__text {
     font-size: 42px;
@@ -2127,11 +2117,11 @@ button:hover {
   }
   .our-advantages-phone .back-phone {
     width: 300px;
-    left: -80px;
+    left: -60px;
   }
   .our-advantages-phone .front-phone {
     width: 400px;
-    left: 0px;
+    left: 10px;
   }
   .our-advantages-phone .back-circle {
     width: 120%;
@@ -2179,7 +2169,7 @@ button:hover {
     margin-left: -50px;
   }
   .our-service-list:nth-child(2) {
-    margin-left: -45px;
+    margin-left: -50px;
   }
   .our-service__button {
     display: none;
