--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -2,7 +2,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-ExtraLight.ttf);
+    src: url(../../fonts/Oswald-ExtraLight.ttf) format('ttf');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -10,7 +10,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-Light.ttf);
+    src: url(../../fonts/Oswald-Light.ttf) format('ttf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -19,7 +19,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-Regular.ttf);
+    src: url(../../fonts/Oswald-Regular.ttf) format('ttf');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -27,14 +27,14 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-Medium.ttf);
+    src: url(../../fonts/Oswald-Medium.ttf) format('ttf');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-SemiBold.ttf);
+    src: url(../../fonts/Oswald-SemiBold.ttf) format('ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -42,7 +42,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswald-Bold.ttf);
+    src: url(../../fonts/Oswald-Bold.ttf) format('ttf');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -50,7 +50,7 @@
 
 @font-face{
     font-family: 'OpenSans';
-    src: url(../../fonts/OpenSans-Light.ttf);
+    src: url(../../fonts/OpenSans-Light.ttf) format('ttf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -58,7 +58,7 @@
 
 @font-face{
     font-family: 'OpenSans';
-    src: url(../../fonts/OpenSans-Regular.ttf);
+    src: url(../../fonts/OpenSans-Regular.ttf) format('ttf');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -66,7 +66,7 @@
 
 @font-face{
     font-family: 'OpenSans';
-    src: url(../../fonts/OpenSans-SemiBold.ttf);
+    src: url(../../fonts/OpenSans-SemiBold.ttf) format('ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -74,7 +74,7 @@
 
 @font-face{
     font-family: 'FiraSans';
-    src: url(../../fonts/FiraSans-Light.ttf);
+    src: url(../../fonts/FiraSans-Light.ttf) format('ttf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
