--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -298,6 +298,7 @@ button {
     background-repeat: no-repeat;
     position: relative; 
     padding-top: 100px;
+    overflow: hidden;
 
     .row {
         margin-left: 60px;
@@ -356,6 +357,7 @@ button {
 
     &-item {
         margin-top: 70px;
+        padding: 0;
     }
     &-list {
         list-style: none;
@@ -402,6 +404,7 @@ button {
 // How to be a member of our service
 .become-member {
     padding: 120px 0;
+    overflow: hidden;
     .row {
         margin-left: 60px;
     }
@@ -460,6 +463,7 @@ button {
 .faq {
     padding-top: 40px;
     padding-bottom: 120px;
+    overflow: hidden;
     &__title {
         @include font(500);
         font-size: 48px;
@@ -538,6 +542,7 @@ button {
     margin: 0 auto;
     background-color: var(--light);
     padding: 120px 0;
+    overflow: hidden;
     .row {
         margin-left: 75px;
     }
@@ -552,6 +557,9 @@ button {
         position: relative;
         .video {
             width: 100%;
+        }
+        .plyr__poster {
+            background-size: cover;
         }
         .plyr__control--overlaid{
             background: var(--red) !important;
@@ -611,6 +619,7 @@ button {
     margin: 0 auto;
     padding: 70px 0;
     background-color: var(--dark);
+    overflow: hidden;
 
     &-text {
         font-family: 'FiraSans', sans-serif;
