--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -26,8 +26,8 @@
 }
 
 @font-face{
-    font-family: 'Oswald';
-    src: url(../../fonts/Oswald-Medium.ttf) format('ttf');
+    font-family: 'Oswaldmedium';
+    src: url(../../fonts/Oswaldmedium.woff2) format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
