--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 @font-face {
   font-family: 'Oswald';
-  src: url(../../fonts/Oswaldextralight.ttf) format("truetype"), url(../../fonts/Oswaldextralight.woff) format("woff"), url(../../fonts/Oswaldextralight.woff2) format("woff2");
+  src: url(../../fonts/Oswald-ExtraLight.ttf) format("ttf");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url(../../fonts/Oswaldlight.ttf) format("truetype"), url(../../fonts/Oswaldlight.woff) format("woff"), url(../../fonts/Oswaldlight.woff2) format("woff2");
+  src: url(../../fonts/Oswald-Light.ttf) format("ttf");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url(../../fonts/Oswaldregular.ttf) format("truetype"), url(../../fonts/Oswaldregular.woff) format("woff"), url(../../fonts/Oswaldregular.woff2) format("woff2");
+  src: url(../../fonts/Oswald-Regular.ttf) format("ttf");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -25,7 +25,7 @@
 
 @font-face {
   font-family: 'Oswaldmedium';
-  src: url(../../fonts/Oswaldmedium.ttf) format("truetype"), url(../../fonts/Oswaldmedium.woff) format("woff"), url(../../fonts/Oswaldmedium.woff2) format("woff2");
+  src: url(../../fonts/Oswaldmedium.woff2) format("woff2");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -33,7 +33,7 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url(../../fonts/Oswalddemibold.ttf) format("truetype"), url(../../fonts/Oswaldmedium.woff) format("woff"), url(../../fonts/Oswaldmedium.woff2) format("woff2");
+  src: url(../../fonts/Oswald-SemiBold.ttf) format("ttf");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -41,7 +41,7 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url(../../fonts/Oswaldbold.ttf) format("truetype"), url(../../fonts/Oswaldbold.woff) format("woff"), url(../../fonts/Oswaldbold.woff2) format("woff2");
+  src: url(../../fonts/Oswald-Bold.ttf) format("ttf");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
