--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -2,9 +2,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswaldextralight.ttf) format('truetype'),
-         url(../../fonts/Oswaldextralight.woff) format('woff'), 
-         url(../../fonts/Oswaldextralight.woff2) format('woff2');   
+    src: url(../../fonts/Oswald-ExtraLight.ttf) format('ttf');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -12,9 +10,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswaldlight.ttf) format('truetype'),
-         url(../../fonts/Oswaldlight.woff) format('woff'), 
-         url(../../fonts/Oswaldlight.woff2) format('woff2'); 
+    src: url(../../fonts/Oswald-Light.ttf) format('ttf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -23,9 +19,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswaldregular.ttf) format('truetype'),
-         url(../../fonts/Oswaldregular.woff) format('woff'), 
-         url(../../fonts/Oswaldregular.woff2) format('woff2'); 
+    src: url(../../fonts/Oswald-Regular.ttf) format('ttf');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -33,18 +27,14 @@
 
 @font-face{
     font-family: 'Oswaldmedium';
-    src: url(../../fonts/Oswaldmedium.ttf) format('truetype'),
-         url(../../fonts/Oswaldmedium.woff) format('woff'), 
-         url(../../fonts/Oswaldmedium.woff2) format('woff2'); 
+    src: url(../../fonts/Oswaldmedium.woff2) format('woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswalddemibold.ttf) format('truetype'),
-         url(../../fonts/Oswaldmedium.woff) format('woff'), 
-         url(../../fonts/Oswaldmedium.woff2) format('woff2'); 
+    src: url(../../fonts/Oswald-SemiBold.ttf) format('ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -52,9 +42,7 @@
 
 @font-face{
     font-family: 'Oswald';
-    src: url(../../fonts/Oswaldbold.ttf) format('truetype'),
-         url(../../fonts/Oswaldbold.woff) format('woff'), 
-         url(../../fonts/Oswaldbold.woff2) format('woff2'); 
+    src: url(../../fonts/Oswald-Bold.ttf) format('ttf');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
