--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -146,7 +146,7 @@ button {
         }
         &__text {
             // @include font(500);
-            font-family: 'Oswaldmedium';
+            font-family: 'Oswaldmedium', sans-serif;
             font-weight: 500;
             font-style: normal;
             font-size: 64px;
