--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1137,87 +1137,19 @@ button:hover {
   font-size: 18px;
   color: var(--gray);
   margin-top: 24px;
+  width: 50%;
 }
 
-.bidding-enhanced-buttons button {
-  width: 180px;
-  height: 56px;
-  margin-top: 40px;
+.bidding-enhanced .form {
+  width: 500px;
+  padding: 40px 20px;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
-.bidding-enhanced-buttons button:hover {
-  border: 3px solid var(--red);
-}
-
-.bidding-enhanced .btn_submit {
-  margin-left: 25px;
-}
-
-.footer {
-  width: 100%;
-  margin: 0 auto;
-  padding: 70px 0;
-  background-color: var(--dark);
-  overflow: hidden;
-}
-
-.footer-text {
-  font-family: 'FiraSans', sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-  color: var(--white);
-  margin-top: 18px;
-}
-
-.modal-content {
-  -webkit-box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
-          box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
-  width: 450px;
-  height: 550px;
-}
-
-.modal-header {
-  position: relative;
-  border: none;
-}
-
-.modal-header .close-modal {
-  position: absolute;
-  top: -15px;
-  right: -15px;
-  width: 40px;
-  height: 40px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
-  background-color: var(--white);
-  color: var(--red);
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 25px;
-  cursor: pointer;
-  -webkit-transition: .5s;
-  -o-transition: .5s;
-  transition: .5s;
-}
-
-.modal-header .close-modal:hover {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-
-.modal-title {
+.bidding-enhanced .form__title {
   font-family: 'Oswald';
   font-weight: 500;
   font-style: normal;
@@ -1228,13 +1160,10 @@ button:hover {
   text-transform: uppercase;
   text-align: center;
   width: 100%;
-}
-
-.modal .form {
   text-align: center;
 }
 
-.modal .form-item {
+.bidding-enhanced .form-item {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1254,14 +1183,14 @@ button:hover {
           flex-direction: column;
 }
 
-.modal .form-list {
+.bidding-enhanced .form-list {
   width: 70%;
   height: 40px;
   margin-bottom: 20px;
   position: relative;
 }
 
-.modal .form__input {
+.bidding-enhanced .form__input {
   width: 100%;
   height: 100%;
   outline: none;
@@ -1271,13 +1200,14 @@ button:hover {
   color: var(--dark);
   border: none;
   border-bottom: 2px solid var(--gray);
+  background: transparent;
 }
 
-.modal .form__input:focus {
+.bidding-enhanced .form__input:focus {
   border-bottom: 2px solid var(--red);
 }
 
-.modal .form__label {
+.bidding-enhanced .form__label {
   position: absolute;
   left: 0px;
   top: 10px;
@@ -1290,26 +1220,26 @@ button:hover {
   transition: .3s;
 }
 
-.modal .form .form__input:focus ~ .form__label,
-.modal .form .form__input:not(:placeholder-shown) ~ .form__label {
+.bidding-enhanced .form .form__input:focus ~ .form__label,
+.bidding-enhanced .form .form__input:not(:placeholder-shown) ~ .form__label {
   top: -8px;
   font-size: 13px;
   color: var(--red);
 }
 
-.modal .form .select-item {
+.bidding-enhanced .form .select-item {
   max-height: 130px;
   overflow-y: scroll;
   position: relative;
-  background-color: var(--light);
+  background-color: var(--white);
   z-index: 5;
-  visibility: hidden;
+  display: none;
   -webkit-transition: .3s;
   -o-transition: .3s;
   transition: .3s;
 }
 
-.modal .form .select .option {
+.bidding-enhanced .form .select .option {
   height: 45px;
   text-align: start;
   display: -webkit-box;
@@ -1331,12 +1261,12 @@ button:hover {
   transition: .3s;
 }
 
-.modal .form .select .option:hover {
+.bidding-enhanced .form .select .option:hover {
   background-color: var(--red);
   color: var(--white);
 }
 
-.modal .form .select .fa-chevron-down {
+.bidding-enhanced .form .select .fa-chevron-down {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -1346,41 +1276,58 @@ button:hover {
   cursor: pointer;
 }
 
-.modal .form .select .rotateChevron {
+.bidding-enhanced .form .select .rotateChevron {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
 }
 
-.modal .form .openOptions {
-  visibility: visible;
+.bidding-enhanced .form .openOptions {
+  display: block;
 }
 
-.modal .form .select-item::-webkit-scrollbar {
+.bidding-enhanced .form .select-item::-webkit-scrollbar {
   width: 5px;
 }
 
-.modal .form .select-item::-webkit-scrollbar-track {
+.bidding-enhanced .form .select-item::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 3px var(--gray);
           box-shadow: inset 0 0 3px var(--gray);
   -webkit-border-radius: 2px;
           border-radius: 2px;
 }
 
-.modal .form .select-item::-webkit-scrollbar-thumb {
+.bidding-enhanced .form .select-item::-webkit-scrollbar-thumb {
   background: var(--red);
   -webkit-border-radius: 2px;
           border-radius: 2px;
 }
 
-.modal .form__button {
+.bidding-enhanced .form__button {
   width: 180px;
   height: 50px;
   margin-top: 40px;
 }
 
-.modal .form__button:hover {
+.bidding-enhanced .form__button:hover {
   border: 3px solid var(--red);
+}
+
+.footer {
+  width: 100%;
+  margin: 0 auto;
+  padding: 70px 0;
+  background-color: var(--dark);
+  overflow: hidden;
+}
+
+.footer-text {
+  font-family: 'FiraSans', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+  color: var(--white);
+  margin-top: 18px;
 }
 
 @-webkit-keyframes animInfo {
@@ -1590,13 +1537,16 @@ button:hover {
     font-size: 40px;
     line-height: 50px;
   }
+  .bidding-enhanced__text {
+    width: 100%;
+  }
   .bidding-enhanced-buttons button {
     width: 150px;
     height: 45px;
     font-size: 14px;
   }
-  .bidding-enhanced .btn_submit {
-    margin-left: 25px;
+  .bidding-enhanced .form {
+    margin: 25px auto;
   }
 }
 
@@ -1778,15 +1728,6 @@ button:hover {
   }
   .bidding-enhanced .row {
     margin-left: 20px;
-  }
-  .bidding-enhanced_mobile {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap-reverse;
-        -ms-flex-wrap: wrap-reverse;
-            flex-wrap: wrap-reverse;
   }
   .bidding-enhanced-video {
     width: 100%;
@@ -2034,6 +1975,13 @@ button:hover {
   .bidding-enhanced .btn_submit {
     margin-left: 0px;
     margin-top: 25px;
+  }
+  .bidding-enhanced .form {
+    width: 100%;
+    padding: 25px 0;
+  }
+  .bidding-enhanced .form-list {
+    width: 90%;
   }
   .footer {
     padding: 50px 0;
