--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -598,72 +598,17 @@ button {
         font-size: 18px;
         color: var(--gray); 
         margin-top: 24px;
-    }
-    &-buttons button {
-        width: 180px;
-        height: 56px;
-        margin-top: 40px;
-
-        &:hover {
-            border: 3px solid var(--red);
-        }
+        width: 50%;
     }
     
-    .btn_submit {
-        margin-left: 25px;
-    }
-}
-
-// footer
-
-.footer {
-    width: 100%;
-    margin: 0 auto;
-    padding: 70px 0;
-    background-color: var(--dark);
-    overflow: hidden;
-
-    &-text {
-        font-family: 'FiraSans', sans-serif;
-        font-weight: 300;
-        font-style: normal;
-        font-display: swap;
-        color: var(--white);
-        margin-top: 18px;
-    }
-}
-
-// Modal
-
-.modal {
-    &-content {
-    box-shadow: 0px 4px 12px 2px rgba(255, 43, 42, 0.15);
-    width: 450px;
-    height: 550px;
-    }
-    &-header {
-        position: relative;
-        border: none;
-        .close-modal {
-            position: absolute;
-            top: -15px;
-            right: -15px;
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: var(--white);
-            color: var(--red);
-            @include flex-center();
-            font-size: 25px;
-            cursor: pointer;
-            transition: .5s;
-
-            &:hover {
-                transform: rotate(180deg)
-            }
-        }
-    }
-    &-title {
+    .form {
+        width: 500px;
+        padding: 40px 20px;
+        border-radius: 20px;
+        -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+        -moz-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+        box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+       &__title {
         @include font(500);
         font-size: 24px;
         line-height: 64px;
@@ -671,10 +616,8 @@ button {
         text-transform: uppercase;
         text-align: center;
         width: 100%;
-    }
-
-    .form {
         text-align: center;
+       }
         &-item {
             @include flex-column(center, center);
         }
@@ -694,6 +637,7 @@ button {
             color: var(--dark);
             border: none;
             border-bottom: 2px solid var(--gray);
+            background: transparent;
 
             &:focus {
                 border-bottom: 2px solid var(--red); 
@@ -722,9 +666,9 @@ button {
                 max-height: 130px;
                 overflow-y: scroll;
                 position: relative;
-                background-color: var(--light);
+                background-color: var(--white);
                 z-index: 5;
-                visibility: hidden;
+                display: none;
                 transition: .3s;
             }
             .option {
@@ -759,7 +703,7 @@ button {
         }
 
         .openOptions {
-            visibility: visible;
+            display: block;
         }
 
         
@@ -784,6 +728,25 @@ button {
                 border: 3px solid var(--red);
             }
         }
+    }
+}
+
+// footer
+
+.footer {
+    width: 100%;
+    margin: 0 auto;
+    padding: 70px 0;
+    background-color: var(--dark);
+    overflow: hidden;
+
+    &-text {
+        font-family: 'FiraSans', sans-serif;
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+        color: var(--white);
+        margin-top: 18px;
     }
 }
    
