--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -683,10 +683,6 @@ button:hover {
   margin-top: 60px;
 }
 
-.our-advantages__button:hover {
-  border: 3px solid var(--red);
-}
-
 .our-service {
   width: 100%;
   height: 806px;
@@ -1309,10 +1305,6 @@ button:hover {
   margin-top: 40px;
 }
 
-.bidding-enhanced .form__button:hover {
-  border: 3px solid var(--red);
-}
-
 .footer {
   width: 100%;
   margin: 0 auto;
@@ -1751,8 +1743,13 @@ button:hover {
   .mobile_fixed {
     display: block;
   }
+  .header .nav {
+    position: relative;
+  }
   .header .nav-item__button {
-    margin-top: 20px;
+    position: absolute;
+    right: 15px;
+    top: 20px;
   }
   .header-title {
     margin-top: 50px;
@@ -2017,9 +2014,6 @@ button:hover {
   .header .nav .email-icon,
   .header .nav .phone-icon {
     margin-right: 4px;
-  }
-  .header .nav-item__button {
-    margin-top: 20px;
   }
   .header .nav-email__text {
     letter-spacing: 0px;
