--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -284,9 +284,9 @@ button {
         height: 56px;
         margin-top: 60px;
 
-        &:hover {
-            border: 3px solid var(--red);
-        }
+        // &:hover {
+        //     border: 3px solid var(--red);
+        // }
     }
 }
 
@@ -723,10 +723,6 @@ button {
             width: 180px;
             height: 50px;
             margin-top: 40px;
-
-            &:hover {
-                border: 3px solid var(--red);
-            }
         }
     }
 }
