--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1056,8 +1056,8 @@ button:hover {
 }
 
 .bidding-enhanced-video {
-  width: 90%;
-  height: auto;
+  width: 100%;
+  height: 354px;
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(40, 46, 62, 0.17)), to(rgba(40, 46, 62, 0.17))), url(maxresdefault.jpg), #C4C4C4;
   background: -webkit-linear-gradient(bottom, rgba(40, 46, 62, 0.17), rgba(40, 46, 62, 0.17)), url(maxresdefault.jpg), #C4C4C4;
   background: -o-linear-gradient(bottom, rgba(40, 46, 62, 0.17), rgba(40, 46, 62, 0.17)), url(maxresdefault.jpg), #C4C4C4;
@@ -1074,6 +1074,7 @@ button:hover {
 
 .bidding-enhanced-video .video {
   width: 100%;
+  height: 100%;
   -webkit-backface-visibility: hidden !important;
 }
 
@@ -2014,6 +2015,9 @@ button:hover {
   .header .nav .email-icon,
   .header .nav .phone-icon {
     margin-right: 4px;
+  }
+  .header .nav-item__button {
+    margin-top: 20px;
   }
   .header .nav-email__text {
     letter-spacing: 0px;
