--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -548,8 +548,8 @@ button {
         margin-left: 75px;
     }
     &-video {
-        width: 90%;
-        height: auto;
+        width: 100%;
+        height: 354px;
         background: linear-gradient(0deg, rgba(40, 46, 62, 0.17), rgba(40, 46, 62, 0.17)), url(maxresdefault.jpg), #C4C4C4;
         border: 9px solid #282E3E;
         box-sizing: border-box;
@@ -558,6 +558,7 @@ button {
         position: relative;
         .video {
             width: 100%;
+            height: 100%;
             -webkit-backface-visibility: hidden !important;
         }
         .plyr__poster {
